src/objects/ServiceRequestType_Jurisdiction__c.object
<CustomObject>
    <description>Junction Object between Service Request Type and Jurisdiction and contains SLAs</description>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <label>Agency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <referenceTo>Jurisdiction__c</referenceTo>
        <relationshipLabel>Service Request Type  Jurisdictions</relationshipLabel>
        <relationshipName>ServiceRequestType_Jurisdictions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <description>Stores SLAs for a Service Request Type and Agency and Department in Jurisdiction.</description>
        <label>SLA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRequestType__c</fullName>
        <label>Service Request Type</label>
        <referenceTo>ServiceRequestType__c</referenceTo>
        <relationshipLabel>Service Request Type  Jurisdictions</relationshipLabel>
        <relationshipName>Service_Request_Type_Jurisdictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Service Request Type  Jurisdiction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Jurisdiction__c</columns>
        <columns>ServiceRequestType__c</columns>
        <columns>SLA__c</columns>
        <columns>Agency_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Request Type  Jurisdictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>